# bolt1

./: CLAUDE.md  README.md  flake.nix  ppad-bolt1.cabal
bench/: Fixtures.hs  Main.hs  Weight.hs
etc/: 01-messaging.md
lib/Lightning/Protocol/: BOLT1.hs
lib/Lightning/Protocol/BOLT1/: Codec.hs  Internal.hs  Message.hs  Prim.hs  TLV.hs
plans/: ARCH1.md  ARCH2.md  ARCH3.md  IMPL1-1.md  IMPL1-2.md  IMPL1-3.md  IMPL1-4.md  IMPL1-5.md  IMPL1-6.md  IMPL2.md  IMPL3.md  IMPL4.md  IMPL5.md  REVIEW-80d0966.md  REVIEW-98b9bbba.md
test/: Main.hs
