cabal-version:      3.0
name:               ppad-bolt1
version:            0.0.1
synopsis:           Base protocol per BOLT #1
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.10.3
extra-doc-files:    CHANGELOG
description:
  Base protocol, per
  [BOLT #1](https://github.com/lightning/bolts/blob/master/01-messaging.md).

source-repository head
  type:     git
  location: git.ppad.tech/bolt1.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Lightning.Protocol.BOLT1
      Lightning.Protocol.BOLT1.Codec
      Lightning.Protocol.BOLT1.Message
      Lightning.Protocol.BOLT1.Prim
      Lightning.Protocol.BOLT1.TLV
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , deepseq >= 1.4 && < 1.6

test-suite bolt1-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      base
    , bytestring
    , ppad-base16
    , ppad-bolt1
    , tasty
    , tasty-hunit
    , tasty-quickcheck

benchmark bolt1-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall -fno-warn-orphans

  build-depends:
      base
    , bytestring
    , criterion
    , deepseq
    , ppad-bolt1

benchmark bolt1-weigh
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Weight.hs

  ghc-options:
    -rtsopts -O2 -Wall -fno-warn-orphans

  build-depends:
      base
    , bytestring
    , deepseq
    , ppad-bolt1
    , weigh
